@@ -1,3 +1,5 @@
+2009-09-08 v0.23 Leto 975 tests
+  * Fix [perl RT #67244] hex "e" misunderstood by Math::BigRat
 
 2008-04-06 v0.22 Tels 973 tests
   * fix bug ##34584: hang when calling exp (Thanx Steve Wills!)
